# atlasmns-trace

./: .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog  atlasmns-trace.lsm  autogen.sh  build-rpm  packaging.conf
ci/: build  install
debian/: atlasmns-trace-agent.examples  atlasmns-trace-agent.init  atlasmns-trace-agent.install  atlasmns-trace-agent.manpages  atlasmns-trace-common.examples  atlasmns-trace-common.install  atlasmns-trace-controller.install  atlasmns-trace-controller.manpages  atlasmns-trace-importer.install  atlasmns-trace-scheduler.init  atlasmns-trace-scheduler.install  atlasmns-trace-scheduler.manpages  atlasmns-trace-service.init  atlasmns-trace-trigger.init  changelog  control  copyright  rules  watch
debian/upstream/: metadata
freebsd/atlasmns-trace/: Makefile  distinfo  pkg-descr  pkg-plist
rpm/: atlasmns-trace.spec
src/: AtlasMNS.py  AtlasMNSLogger.py  AtlasMNSTools.py  AtlasMSNLogger.py  CMakeLists.txt  atlasmns-configuration  atlasmns-database-configuration  atlasmns-scheduler  atlasmns-trace-agent.1  atlasmns-trace-agent.cc  atlasmns-trace-controller  atlasmns-trace-controller.1  atlasmns-trace-importer  atlasmns-trace-scheduler  atlasmns-trace-scheduler.1  atlasmns-tracedataimporter  atlasmns-tracedataimporter-configuration  atlasmsn-database-configuration  query-example  setup.py.in  t1  t2.cc  test-input.json  test-input1.json  test-input2.json  test-input3.json  tools.h
src/NoSQL/: CMakeLists.txt  README  database.ms  schema.ms  users.ms
src/SQL/: CMakeLists.txt  README  database.sql  install-database-and-users  schema.sql  users.sql
src/stuff/: MNS-VMs.txt  NMS-VMs.txt  Status-July2019.odp  make-ssh-scripts
src/tests/: atlas-test1  example.txt  logger-test1  readline-test1
