#############################################################################
# PROGRAMS
#############################################################################

INSTALL(PROGRAMS atlastrace-trace-scheduler DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES atlastrace-trace-scheduler.1  DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)


#############################################################################
# EXAMPLES
#############################################################################
